Correction of the initialization, everything now is move to Defeine_param()

--- a/documentation/html/state__machine_8c.html
+++ b/documentation/html/state__machine_8c.html
@@ -201,7 +201,7 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>Li_Ion_param</b> ()</
 </div><div class="memdoc">
 
 <p>Function to start the State Machine. </p>
-<p>At first, this function check which is the current cell. If  is equal to '1' it will ask for user intervention to start. It will prompt the user to press 's'. If the user press 's' the program will start, but the user can also press 'ESC' and go to the /enum STANDBY state. </p>
+<p>At first, this function check which is the current cell. If <code>cell_count</code> is equal to <b>'1'</b> it will ask for user intervention to start. It will prompt the user to press <b>'s'</b>. If the user press it, the program will start. The user can also press <b>'ESC'</b> and go to the <code>STANDBY</code> state. If the current cell is <b>not '1'</b> the program will start without the user intervention. </p>
 
 </div>
 </div>
