--- a/documentation/html/index.html
+++ b/documentation/html/index.html
@@ -75,29 +75,24 @@ $(function() {
 </ul>
 <h3>What is this repository for?</h3>
 <ul>
-<li>Quick summary</li>
-<li>Version</li>
-<li><a href="https://bitbucket.org/tutorials/markdowndemo">Learn Markdown</a></li>
+<li>This repository was created to be used in conjuction with the integrated system known as "Charger_discharger.V4.1". It was created to control the PIC16F86 installed for feedback control and serial logging.</li>
+<li>Hardware version: Charger_discharger.V4.1</li>
 </ul>
 <h3>How do I get set up?</h3>
 <ul>
-<li>Summary of set up</li>
-<li>Configuration</li>
-<li>Dependencies</li>
-<li>Database configuration</li>
-<li>How to run tests</li>
-<li>Deployment instructions</li>
+<li>Connect usign serial cable model "" usign BR:19200 kbps, Data: 8 bit, Parity: none, Stop bits: 1, Flow control: none.</li>
+<li>Press "x" to restart and show the main menu.</li>
+<li>Set the desired configuration following the instructions. After resetting there is a hidden menu that can be shown pressing "h".</li>
 </ul>
 <h3>Contribution guidelines</h3>
 <ul>
-<li>Writing tests</li>
-<li>Code review</li>
-<li>Other guidelines</li>
+<li>If you want to propose a review or need to modify the code for any reason first clone this <a href="https://bitbucket.org/juanjorojash/cell_charger_discharger/src/master/">repository</a> in your PC and create a new branch for your changes. <br />
+Once your changes are complete and fully tested ask the administrator permission to push this new branch into the source.</li>
+<li>If you just want to do local changes instead you can download a zip version of the repository and do all changes locally in your PC.</li>
 </ul>
 <h3>Who do I talk to?</h3>
 <ul>
-<li>Repo owner or admin</li>
-<li>Other community or team contact </li>
+<li><a href="#" onclick="location.href='mai'+'lto:'+'jua'+'n.'+'roj'+'as'+'@it'+'cr'+'.ac'+'.c'+'r'; return false;">Juan J. Rojas</a> </li>
 </ul>
 </div></div><!-- contents -->
 <!-- start footer part -->
