--- a/documentation/html/index.html
+++ b/documentation/html/index.html
@@ -84,7 +84,7 @@ $(function() {
 <li><b>Serial terminal</b> Start with the following settings BR:19200 kbps, Data: 8 bit, Parity: none, Stop bits: 1, Flow control: none. Press "x" to restart and show the main menu. Set the desired configuration following the instructions.</li>
 <li><b>LabView logger program</b> A program for receiving, saving and plotting the test data is included in the repository, in the directory <b>labview_logger/logger.exe</b>. The following programs are needed in order to run this program in a PC that <b>does not</b> have LabView installed:<ul>
 <li><a href="http://www.ni.com/download/labview-run-time-engine-2016/6067/en/">LabVIEW Run-Time Engine 2016 - (64-bit)</a></li>
-<li><a href="http://www.ni.com/download/ni-visa-run-time-engine-16.0/6188/en/">NI-VISA Run-Time Engine 16.0</a></li>
+<li><a href="http://www.ni.com/download/ni-visa-run-time-engine-16.0/6188/en/">NI-VISA Run-Time Engine 16.0</a> The program creates the directory <b>c:/logger_data</b> to store the data.</li>
 </ul>
 </li>
 </ul>
